MESOS-1376: Fixed an invalid reference in the Registrar.